--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
     },
     "dependencies": {
+        "@superfluid-finance/sdk-core": "^0.3.2",
         "pinia": "^2.0.13",
         "vue": "^3.2.33",
-        "vue-router": "^4.0.14"
+        "vue-router": "^4.0.14",
+        "web3": "^1.7.3"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.0",
